--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.0",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
@@ -21,7 +24,8 @@
     "nodemon": "^1.17.4"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
